--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -54,7 +54,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'box'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbox\u001b[39;00m \u001b[39mimport\u001b[39;00m ConfigBox\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'box'"
+     ]
+    }
+   ],
    "source": [
     "from box import ConfigBox"
    ]
@@ -230,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textS",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -244,9 +256,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
